--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-redux-form": "^1.16.8",
+    "react-scripts": "2.1.8",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
